<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <!--    android:alignmentMode -->
    <!--    android:columnWidth -->
    <!--    android:stretchMode -->
    <!--    android:verticalSpacing -->
    <!--    android:horizontalSpacing -->

    <Button
        android:id="@+id/keypad1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/dialog_sudoku_keypad_1" />

    <Button
        android:id="@+id/keypad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/dialog_sudoku_keypad_2" />

    <Button
        android:id="@+id/keypad3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="2"
        android:text="@string/dialog_sudoku_keypad_3" />

    <Button
        android:id="@+id/keypad4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/dialog_sudoku_keypad_4" />

    <Button
        android:id="@+id/keypad5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/dialog_sudoku_keypad_5" />

    <Button
        android:id="@+id/keypad6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="2"
        android:text="@string/dialog_sudoku_keypad_6" />

    <Button
        android:id="@+id/keypad7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/dialog_sudoku_keypad_7" />

    <Button
        android:id="@+id/keypad8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/dialog_sudoku_keypad_8" />

    <Button
        android:id="@+id/keypad9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:text="@string/dialog_sudoku_keypad_9" />

    <Button
        android:id="@+id/keypadClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:text="@string/dialog_sudoku_keypad_clear_number" />

</GridLayout>
